fix(home-page): card grid overflow problem and padding on mobile

--- a/src/app/components/country-card/country-card.component.scss
+++ b/src/app/components/country-card/country-card.component.scss
@@ -1,7 +1,3 @@
-mat-card {
-  // min-width: 250px;
-}
-
 mat-card-content {
   padding: 0 0 3em 0.6em;
 }
